--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <table cellspacing="20px">
     <tr>
       <td>
-        <img src="C:\Users\sapdo\Desktop\Clases de Udemi\clase html 1\HTML-Personal Site\images\foto perfin.png" alt="Nicolas Cofre" height="240px">
+        <img src="images\foto perfin.png" alt="Nicolas Cofre" height="240px">
       </td>
       <td>
         <h1>Nicolas Cofre </h1>
